fix z-index

--- a/client/src/app/components/App/Canvas/EditorContainer/editorContainer.scss
+++ b/client/src/app/components/App/Canvas/EditorContainer/editorContainer.scss
@@ -100,4 +100,5 @@ canvas{
   height: calc(100vh - 50px) !important;
   width: 100% !important;
   transform: translate(0,0) !important;
+  z-index: 400;
 }
